--- a/src/app/gifs/pages/home-page/home-page.component.html
+++ b/src/app/gifs/pages/home-page/home-page.component.html
@@ -7,6 +7,6 @@
   <div class="col-12 pt-2">
     <!-- Gif list -->
     <!-- Card list -->
-    <gifs-card-list />
+    <gifs-card-list [gifs]="gifs" />
   </div>
 </div>
